# Taperon

./: Placeholder  README.md
taperon_bringup/: package.xml  setup.cfg  setup.py
taperon_bringup/config/: diff_drive.yaml
taperon_bringup/launch/: taperon_gz.launch.py
taperon_bringup/taperon_bringup/: move_into_wall.py
taperon_bringup/worlds/: taperon_wall.sdf
taperon_description/: CMakeLists.txt  package.xml
taperon_description/urdf/: taperon.urdf  taperon.urdf.xacro
taperon_description/urdf/Wheel taperon_urdf/: CMakeLists.txt  package.xml
taperon_description/urdf/Wheel taperon_urdf/config/: joint_names_Wheel taperon_urdf.yaml
taperon_description/urdf/Wheel taperon_urdf/launch/: display.launch  gazebo.launch
taperon_description/urdf/Wheel taperon_urdf/urdf/: Wheel taperon_urdf.csv
taperon_description/urdf/meshes/: base_link.STL  l1.STL  l2.STL  l4.STL  l5.STL  l6.STL  l7.STL  l8.STL  l9.STL  r1.STL  r2.STL  r3.STL  r4.STL  r5.STL  r6.STL  r7.STL  r8.STL  r9.STL
